# versioalueet

./: Makefile  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements.txt  versioalueet.ABOUT
docs/: SUMMARY.md  api.md  book.toml  changes.md  custom.css  foo.md  index.md  install.md  test-coverage.md  usage.md
etc/: baseline-bandit.json  coverage-totals.json  git-stats.json  monthly-downloads.json  packaging-facts.json  yearly-commits.json
test/: test_cli.py  test_env.py  test_versioalueet.py
versioalueet/: __init__.py  __main__.py  api.py  cli.py  env.py
